@@ -2,7 +2,7 @@ Package: neighbours
 Type: Package
 Title: Neighbourhood Functions for Local-Search Algorithms
 Version: 0.1-0
-Date: 2019-11-14
+Date: 2019-12-16
 Maintainer: Enrico Schumann <es@enricoschumann.net>
 Authors@R: person(given = "Enrico", family = "Schumann",
                   role  = c("aut", "cre"),
@@ -14,7 +14,7 @@ Description: Neighbourhood functions are key components
   take a solution and return a slightly-modified copy
   of it, i.e. a neighbour.  The package provides a
   function neighbourfun() that constructs such
-  neighbourhood functions, based on various parameters
+  neighbourhood functions, based on parameters
   such as admissible ranges for elements in a solution.
   Supported are numeric and logical solutions.  The
   algorithms were originally created for
